# builder

./: .gitignore  Cargo.toml  README.md  builder.toml
docs/: build.example.toml  builder.example.toml
src/: builder.rs  cli.rs  config.rs  main.rs  module.rs  parser.rs  runner.rs  spinner.rs  toml.rs  types.rs  utils.rs
src/commands/: build.rs  mod.rs  run.rs
