[package]
name = "builder"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.200", features = ["derive"] }
colored = "2.1.0"
rayon = "1.10.0"
toml = "0.8.12"
strum = { version = "0.26.3", features = ["derive"] }
which = "6.0.2"
serde_json = "1.0.122"

[profile.release]
opt-level = "z"
lto = true
strip = true
