[package]
name = "builder"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
clap = { version = "4.5.7", features = ["derive"] }
serde_json = "1.0.122"
indicatif = "0.17.8"
colored = "2.1.0"
rayon = "1.10.0"
which = "6.0.2"
toml = "0.8.12"

[profile.release]
opt-level = "z"
lto = true
strip = true
