[package]
name = "builder"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
clap = { version = "4.5.20", features = [
    "derive",
    "std",
], default-features = false }
tokio = { version = "1.41.0", features = [
    "process",
    "fs",
    "rt",
    "rt-multi-thread",
    "macros",
] }
which = "7.0.0"
colog = "1.3.0"
toml = "0.8.19"
log = "0.4.22"
serde_json = "1.0.133"

[profile.release]
opt-level = "z"
strip = true
lto = true
